--- a/kanban.front/src/main/resources/public/app/views/kanban/ticketHistoryCreate.html
+++ b/kanban.front/src/main/resources/public/app/views/kanban/ticketHistoryCreate.html
@@ -5,7 +5,7 @@
  <div layout layout="row"> 			  				
 			<md-input-container flex="20" class="md-block" >				
 				<label>Date</label> 
-				 <input type="date" ng-model="history.date" ng-model-options="{timezone:'+0100'}">  
+				 <input type="date" ng-model="history.dateCreation" >  
 				<!-- <md-datepicker ng-model="history.date" md-placeholder="saisir date"></md-datepicker>-->
 			</md-input-container>	
 			<md-input-container flex class="md-block" >				
