--- a/kanban.front/src/main/resources/public/app/views/admin/admin.html
+++ b/kanban.front/src/main/resources/public/app/views/admin/admin.html
@@ -1,36 +1,53 @@
-<div layout="row" layout-wrap>
+<div layout="row" layout-fill >
 
-	<md-list ng-cloak flex="20">
+	<md-list ng-cloak flex="20" style="border-right: 1px solid;">
 		 <md-subheader class="md-no-sticky">Utilisateurs</md-subheader>
   			<md-list-item ng-click="ctrl.goTo('admin.utilisateur')">
     			<img ng-src="/asset/svg/ic_person_24px.svg" class="md-avatar" />
     			<p>Liste des utilisateurs du kanban</p>    			
-  			</md-list-item>
-	  	<md-divider></md-divider>
+  			</md-list-item>	  	
 	
 		<md-subheader class="md-no-sticky">Applications</md-subheader>
   			<md-list-item ng-click="ctrl.goTo('admin.application')">
     			<img ng-src="/asset/svg/ic_translate_48px.svg" class="md-avatar" />
     			<p>Liste des applications</p>    			
-  			</md-list-item>
-	  	<md-divider></md-divider>
+  			</md-list-item>	  	
 	  	
 	  	<md-subheader class="md-no-sticky">Statuts</md-subheader>
   			<md-list-item ng-click="ctrl.goTo('admin.statut')">
     			<img ng-src="/asset/svg/ic_feedback_48px.svg" class="md-avatar" />
     			<p>Liste des statuts</p>    			
-  			</md-list-item>
-	  	<md-divider></md-divider>
+  			</md-list-item>	  	
 	  	
 	  	<md-subheader class="md-no-sticky">Zones</md-subheader>
   			<md-list-item ng-click="ctrl.goTo('admin.zones')">
     			<img ng-src="/asset/svg/ic_view_carousel_48px.svg" class="md-avatar" />
     			<p>Liste des zones du kanban</p>    			
   			</md-list-item>
+  			
+  			<md-subheader class="md-no-sticky">Priorités</md-subheader>
+  			<md-list-item ng-click="ctrl.goTo('admin.priority')">
+    			<img ng-src="/asset/svg/ic_view_carousel_48px.svg" class="md-avatar" />
+    			<p>Liste des zones du kanban</p>    			
+  			</md-list-item>
 	  		
 	</md-list>
 	<div flex >
-		<div ui-view></div>
+		<div layout="row">
+			<h3>Title de l'application</h3>  
+		</div>
+		<div layout layout="column">			
+			<md-input-container flex> 				
+				<input ng-model="ctrl.applicationTitle"  ng-disabled="ctrl.isNoEdit"> 				
+			</md-input-container>
+			<md-input-container flex="10"> 				
+				<md-button ng-click="ctrl.updateTitle()" style="margin-right:20px;">{{ctrl.buttonValue}}</md-button> 			
+			</md-input-container>
+		</div>
+		<md-divider></md-divider>		
+		<div layout="row" layout-padding ui-view></div>		
+		
+		
 	</div>
 	
 </div>
