--- a/kanban.front/src/main/resources/public/app/views/admin/zones.html
+++ b/kanban.front/src/main/resources/public/app/views/admin/zones.html
@@ -1,1 +1,17 @@
-zones
+<md-content flex layout-padding >
+	<h2 class="md-title">Zones {Liste}</h2>
+	<div layout layout="column">
+		<md-list ng-cloak  flex="40">		
+  			<md-list-item ng-repeat="item in ctrl.zones | orderBy:'order':false " class="md-2-line" ng-click="ctrl.go(item)" >
+    			<img ng-src="/asset/svg/ic_view_carousel_48px.svg" class="md-avatar" />
+    			<div class="md-list-item-text" layout="column">
+    				<h3>{{item.code}} ({{item.order}})</h3>    				
+    				<h4>{{item.libelle}}</h4>
+    				<p>{{item.description}}</p>
+    			</div>
+    			<md-divider></md-divider>
+  			</md-list-item>
+	  	</md-list>
+	  <div ui-view flex ></div>
+	  </div>
+</md-content>
