--- a/kanban.front/src/main/resources/public/app/views/kanban/kanbanPopupSearch.html
+++ b/kanban.front/src/main/resources/public/app/views/kanban/kanbanPopupSearch.html
@@ -39,11 +39,12 @@
 		<div layout layout="row">
 		<md-list>
 	      <md-subheader class="md-no-sticky">{{tickets.length}} ticket(s)</md-subheader>
-	      <md-list-item class="md-2-line" ng-repeat="item in tickets">	 
-	      <img ng-src="/asset/svg/ic_navigate_next_48px.svg" class="md-avatar" ng-click="openTicket(item)"  />       
+	      <md-list-item class="md-2-line" ng-repeat="item in tickets" ng-click="openTicket(item)" >	 
+	      <img ng-src="/asset/svg/ic_navigate_next_48px.svg" class="md-avatar"  />       
 	        <div class="md-list-item-text" layout="column">
-	          <h3>{{ item.ref }} - {{item.appli}} - {{ item.owner }}</h3>	          
+	          <h3>{{ item.reference }} - {{item.application.code}} - {{ item.owner.libelle }}</h3>	          
 	          <p>{{ item.summary }}</p>
+	          <p>{{ item.description }}</p>
 	        </div>
 	         <md-divider ng-if="!$last"></md-divider>
 	      </md-list-item>
