--- a/kanban.front/src/main/resources/public/app/views/admin/param.color.html
+++ b/kanban.front/src/main/resources/public/app/views/admin/param.color.html
@@ -1,6 +1,6 @@
 <md-content flex layout-padding >
 	<h2 class="md-title">
-		{{Paramtitle}} {Liste}
+		{{ctrl.Paramtitle}} {Liste}
 		<md-button class="md-icon-button" aria-label="Ajouter" ng-click="ctrl.add($event)">
         	<md-icon md-svg-icon="/asset/svg/add_cross.svg"></md-icon>
       </md-button>
