--- a/kanban.front/src/main/resources/public/app/views/admin/param.html
+++ b/kanban.front/src/main/resources/public/app/views/admin/param.html
@@ -1,8 +1,8 @@
 <md-content flex layout-padding >
-	<h2 class="md-title">Applications {Liste}</h2>
+	<h2 class="md-title">{{ctrl.ParamTitle}} {Liste}</h2>
 	<div layout layout="column">
 		<md-list ng-cloak flex="40" >		
-  			<md-list-item ng-repeat="item in ctrl.applications" class="md-2-line" ng-click="ctrl.go(item)" >
+  			<md-list-item ng-repeat="item in ctrl.paramList" class="md-2-line" ng-click="ctrl.go(item)" >
     			<img ng-src="/asset/svg/ic_translate_48px.svg" class="md-avatar" />
     			<div class="md-list-item-text" layout="column">
     				<h3>{{item.code}}</h3>
