--- a/kanban.front/src/main/resources/public/app/views/admin/param.color.add.html
+++ b/kanban.front/src/main/resources/public/app/views/admin/param.color.add.html
@@ -10,7 +10,7 @@
 				<input ng-model="internalData.libelle"> 
 			</md-input-container>			
 			<md-input-container flex> 
-				<label>couleur</label>
+				<label class="active">couleur</label>
 				<input type="color" ng-model="internalData.color"> 
 			</md-input-container>	
 		</div>
