--- a/kanban.front/src/main/resources/public/app/views/admin/utilisateur.add.html
+++ b/kanban.front/src/main/resources/public/app/views/admin/utilisateur.add.html
@@ -9,6 +9,9 @@
 				<label>prenom</label> 
 				<input ng-model="user.lastName"> 
 			</md-input-container>
+			<md-input-container flex>
+				<md-checkbox ng-model="user.deleted">supprimé</md-checkbox>
+			</md-input-container>
 			
 		</div>
 		<div layout layout="column">	
