--- a/kanban.front/src/main/resources/public/app/views/admin/zones.html
+++ b/kanban.front/src/main/resources/public/app/views/admin/zones.html
@@ -2,7 +2,7 @@
 	<h2 class="md-title">Zones {Liste}</h2>
 	<div layout layout="column">
 		<md-list ng-cloak  flex="40">		
-  			<md-list-item ng-repeat="item in ctrl.zones | orderBy:'order':false " class="md-2-line" ng-click="ctrl.go(item)" >
+  			<md-list-item ng-repeat="item in ctrl.paramList | orderBy:'order':false " class="md-2-line" ng-click="ctrl.go(item)" >
     			<img ng-src="/asset/svg/ic_view_carousel_48px.svg" class="md-avatar" />
     			<div class="md-list-item-text" layout="column">
     				<h3>{{item.code}} ({{item.order}})</h3>    				
