--- a/kanban.front/src/main/resources/public/app/views/admin/admin.html
+++ b/kanban.front/src/main/resources/public/app/views/admin/admin.html
@@ -31,6 +31,10 @@
     			<img ng-src="/asset/svg/ic_feedback_48px.svg" class="md-avatar" />
     			<p>Liste des priorités d'un ticket</p>    			
   			</md-list-item>
+			<md-list-item ng-click="ctrl.goTo('admin.version')">
+				<img ng-src="/asset/svg/ic_feedback_48px.svg" class="md-avatar" />
+				<p>Liste des versions</p>
+			</md-list-item>
 	  		
 	</md-list>
 	<div flex >
