test pr les datepicker

--- a/kanban.front/src/main/resources/public/app/views/admin/version.add.html
+++ b/kanban.front/src/main/resources/public/app/views/admin/version.add.html
@@ -14,7 +14,7 @@
 	<div layout layout="column">
 		<md-input-container flex>
 			<label>Date VFO</label>
-			<input type="date" ng-model="internalData.dateVfo" >
+			<md-datepicker ng-model="internalData.dateVfo"></md-datepicker>
 		</md-input-container>
 		<md-input-container flex>
 			<label>Date UTI</label>
