--- a/kanban.front/src/main/resources/public/app/views/kanban/kanban.html
+++ b/kanban.front/src/main/resources/public/app/views/kanban/kanban.html
@@ -71,6 +71,9 @@
 				</div>
 				<div class="divider"></div>
 				<div layout="row">
+					<div flex>
+						<span class="md-caption">{{ticket.version.libelle}}</span>
+					</div>
 					<div flex="10">
 						<span class="ticket-status" style="background-color:{{ticket.priority.color}}" layout-align="start">
 							<md-tooltip md-direction="top">Priorité {{ticket.priority.libelle}}</md-tooltip>
