--- a/kanban.front/src/main/resources/public/app/views/admin/version.html
+++ b/kanban.front/src/main/resources/public/app/views/admin/version.html
@@ -9,7 +9,7 @@
   			<md-list-item ng-repeat="item in ctrl.paramList | orderBy:'order':false " class="md-2-line" ng-click="ctrl.go(item)" >
     			<img ng-src="/asset/svg/ic_view_carousel_48px.svg" class="md-avatar" />
     			<div class="md-list-item-text" layout="column">
-    				<h3>{{item.code}} ({{item.dateProd}})</h3>
+    				<h3>{{item.code}} ({{item.dateProd  | date:'dd/MM/yyyy HH:mm'}})</h3>
     				<h4>{{item.libelle}}</h4>
     				<p>{{item.description}}</p>
     			</div>
